# pdembedded

./: .gitignore  .i2s_config.json  .selected_patch  CMakeLists.txt  README.md  SETUP.md  config_generator.py  gui.py  install.sh  requirements.txt
json2esp32/: CMakeLists.txt
json2esp32/main/: CMakeLists.txt  json2esp32.cpp
json2esp32/main/hv/: test.hv.json
json2esp32/main/ir/: test.gui.json
main/: CMakeLists.txt  pdembedded.cpp  sine.cpp  test.pd
main/c/: Heavy_heavy.cpp  Heavy_heavy.h  Heavy_heavy.hpp
main/drivers/uda1334a/: uda1334a.cpp  uda1334a.h
main/ir/: heavy.heavy.ir.json
main/per/: adc.cpp  adc.h
per/: adc.cpp  adc.h
templates/: i2s_config.h.j2
